# ai-team

./: .env  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
agile_agentic_os/: __init__.py  __main__.py  cli.py  config.py
agile_agentic_os/agents/: __init__.py  agent.py
agile_agentic_os/bridge/: __init__.py  event_bus.py  events.py  mcp_server.py
agile_agentic_os/bridge/adapters/: __init__.py  base.py  hardware.py  software.py
agile_agentic_os/channels/: __init__.py  base.py  discord_channel.py  manager.py  message.py  telegram_channel.py
agile_agentic_os/core/: __init__.py  embeddings.py  memory.py  messages.py  session.py  sliding_window.py
agile_agentic_os/guardrails/: __init__.py  limits.py  middleware.py  models.py  rate_limit.py  rbac.py
agile_agentic_os/integrations/: __init__.py
agile_agentic_os/integrations/opencode/: __init__.py  config_gen.py  mcp_stdio.py  runner.py
agile_agentic_os/meta/: __init__.py  discovery.py  hot_reload.py  schema.py  wizard.py
agile_agentic_os/onboarding/: __init__.py  prompter.py  wizard.py
agile_agentic_os/orchestration/: __init__.py  a2a.py  orchestrator.py  proactive.py  triggers.py
agile_agentic_os/routing/: __init__.py  fast_track.py  llm_router.py  slow_track.py
scripts/: setup_env.sh
tests/: test_stage1_session_memory.py  test_stage2_bridge_mcp.py  test_stage3_guardrails_dualtrack.py  test_stage4_meta_agent.py  test_stage5_orchestration_routing.py  test_stage6_opencode_backend.py  test_stage7_channels.py  test_stage8_onboarding.py
