[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-agentic-os"
version = "0.1.0"
description = "Agile Agentic OS - continuous multi-agent OS with Fast/Slow track routing, MCP I/O bridge, guardrails and dynamic LLM routing built on the opencode philosophy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
redis = ["redis>=5.0"]
vector = ["chromadb>=0.4"]
llm = ["litellm>=1.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["agile_agentic_os*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
